manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-sample-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  ingressClassName: ingress-internal
  rules:
  - host: sample.ce-82222875-sa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: cloud-sample
            port:
              number: 8080
        pathType: Prefix
